Session and User service setup to support auth
